[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "salvage-excel"
version = "1.0.0"
description = "Salvage Excel data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pyarrow>=24.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/salvage_excel"]

[project.scripts]
salvage-excel = "salvage_excel:main"

[dependency-groups]
dev = ["ipython"]
